tests/golden/fixtures/syntax-mode-typed-width-errors-far/expected.err
Error: 'ptr' is a 3-byte :far value; no register can hold it directly.
   ╭─[ tests/golden/fixtures/syntax-mode-typed-width-errors-far/input.k65:6:5 ]
   │
 6 │     a = ptr           // lda :far named var
   │     ───┬───  
   │        ╰───── here
   │ 
   │ Help: use a partial view (e.g. ptr:word for the low 16 bits, (ptr+2):byte for the bank byte) or indirect-long ([ptr])
───╯

Error: 'ptr' is a 3-byte :far value; no register can hold it directly.
   ╭─[ tests/golden/fixtures/syntax-mode-typed-width-errors-far/input.k65:7:5 ]
   │
 7 │     ptr = a           // sta :far named var
   │     ───┬───  
   │        ╰───── here
   │ 
   │ Help: use a partial view (e.g. ptr:word for the low 16 bits, (ptr+2):byte for the bank byte) or indirect-long ([ptr])
───╯

Error: 'ptr' is a 3-byte :far value; no register can hold it directly.
   ╭─[ tests/golden/fixtures/syntax-mode-typed-width-errors-far/input.k65:8:5 ]
   │
 8 │     x = ptr           // ldx :far named var
   │     ───┬───  
   │        ╰───── here
   │ 
   │ Help: use a partial view (e.g. ptr:word for the low 16 bits, (ptr+2):byte for the bank byte) or indirect-long ([ptr])
───╯

Error: 'b' is a 3-byte :far value; no register can hold it directly.
   ╭─[ tests/golden/fixtures/syntax-mode-typed-width-errors-far/input.k65:9:5 ]
   │
 9 │     a = b:far         // lda :far typed view on byte var
   │     ────┬────  
   │         ╰────── here
   │ 
   │ Help: use a partial view (e.g. b:word for the low 16 bits, (b+2):byte for the bank byte) or indirect-long ([b])
───╯
